# diploma_todolist

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy_on_main.yaml  push_any_except_main.yaml
core/: admin.py
core/migrations/: 0001_override_custom_user_model.py
deploy/: docker-compose.yaml
todolist/: settings.py
